// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionButtons/> should render links and buttons  1`] = `
<div
  class="container"
>
  <div>
    <span
      class="actionButtons group horizontal"
    >
      <button
        class="wrapper actionButton fill secondary small left"
        type="button"
      >
        button - I am in snapshots
      </button>
      <button
        class="wrapper actionButton fill secondary small right"
        type="button"
      >
        button - I am in snapshots too
      </button>
    </span>
  </div>
  <ul
    class="linkList"
  >
    <li
      class="linkRow"
    >
      <a
        class="link"
        href="heaven"
        rel="noopener noreferrer"
        target="_blank"
      >
        link - I am in snapshots
        <i
          class="linkIcon material-icons"
        >
          open_in_new
        </i>
      </a>
    </li>
    <li
      class="linkRow"
    >
      <a
        class="link"
        href="over the rainbow"
        rel="noopener noreferrer"
        target="_blank"
      >
        the object above is a link to heaven
        <i
          class="linkIcon material-icons"
        >
          open_in_new
        </i>
      </a>
    </li>
  </ul>
</div>
`;

exports[`<ActionButtons/> should render links and buttons in edition mode 1`] = `
<div
  class="container"
>
  <ul
    class="editList"
  >
    <li
      class="editRow"
    >
      <button
        class="wrapper fill secondary small"
        type="button"
      >
        button - I am in snapshots
      </button>
      <span
        class="editIcons"
      >
        <i
          class="material-icons"
        >
          edit
        </i>
        <i
          class="material-icons text-danger"
        >
          delete
        </i>
      </span>
    </li>
    <li
      class="editRow"
    >
      <button
        class="wrapper fill secondary small"
        type="button"
      >
        button - I am in snapshots too
      </button>
      <span
        class="editIcons"
      >
        <i
          class="material-icons"
        >
          edit
        </i>
        <i
          class="material-icons text-danger"
        >
          delete
        </i>
      </span>
    </li>
  </ul>
  <button
    class="wrapper addButton fill secondary small"
    type="button"
  >
    <span
      class="wrapper"
    >
      <i
        class="material-icons icon isLeft small"
      >
        add
      </i>
    </span>
    Add Button
  </button>
  <ul
    class="linkList"
  >
    <li
      class="linkRow"
    >
      <a
        class="link"
        href="heaven"
        rel="noopener noreferrer"
        target="_blank"
      >
        link - I am in snapshots
        <i
          class="linkIcon material-icons"
        >
          open_in_new
        </i>
      </a>
      <span
        class="editIcons"
      >
        <i
          class="material-icons"
          id="custom-action-link-templatePath-0"
        >
          edit
        </i>
        <i
          class="material-icons text-danger"
        >
          delete
        </i>
      </span>
    </li>
    <li
      class="linkRow"
    >
      <a
        class="link"
        href="over the rainbow"
        rel="noopener noreferrer"
        target="_blank"
      >
        the object above is a link to heaven
        <i
          class="linkIcon material-icons"
        >
          open_in_new
        </i>
      </a>
      <span
        class="editIcons"
      >
        <i
          class="material-icons"
          id="custom-action-link-templatePath-1"
        >
          edit
        </i>
        <i
          class="material-icons text-danger"
        >
          delete
        </i>
      </span>
    </li>
  </ul>
  <button
    class="wrapper addButton fill secondary small"
    id="custom-action-link-templatePath"
    type="button"
  >
    <span
      class="wrapper"
    >
      <i
        class="material-icons icon isLeft small"
      >
        add
      </i>
    </span>
    Add Redirection Link
  </button>
</div>
`;
